--- a/wizora/css/product.css
+++ b/wizora/css/product.css
@@ -358,18 +358,17 @@ ul{
     align-content: center;
     justify-items: center;
     padding: 30px;
-    
+    align-items: center;
 }
 .card {
     width: 190px;
-    height: 260px;
+    height: 270px;
     padding: .8em;
     border-radius: .5rem;
     background: #f5f5f5;
     position: relative;
     overflow: visible;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-
 }
    
 .card-img {
@@ -389,6 +388,7 @@ ul{
    
 .card-info {
     padding-top: 10%;
+    height: 100px;
 }
    
 svg {
@@ -404,18 +404,66 @@ svg {
     padding-top: 10px;
     border-top: 1px solid #ddd;
 }
+
+
    
 /*Text*/
-   .text-title {
+.text-title {
     font-weight: 900;
-    font-size: 1.2em;
+    font-size: 1em;
     line-height: 1.5;
+    align-items: center;
+    height: 48px;
+    justify-items: center;
 }
    
 .text-body {
-    font-size: .9em;
+    font-size: .8em;
     padding-bottom: 10px;
 }
+
+.s-button {
+    width: 140px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    border: none;
+    position: relative;
+    background-color: transparent;
+    color: #0d1a29;
+    font-weight: bold;
+    transition: .2s cubic-bezier(0.19, 1, 0.22, 1);
+    opacity: 0.6;
+  }
+  
+  .s-button ::after {
+    content: '';
+    border-bottom: 3px double #202531;
+    width: 0;
+    height: 100%;
+    position: absolute;
+    margin-top: -5px;
+    top: 0;
+    left: 5px;
+    visibility: hidden;
+    opacity: 1;
+    transition: .2s linear;
+  }
+  
+  .s-button .s-icon {
+    transform: translateX(0%);
+    transition: .2s linear;
+    animation: attention 1.2s linear infinite;
+  }
+  
+  .s-button :hover::after {
+    visibility: visible;
+    opacity: 0.7;
+    width: 90%;
+  }
    
 /*Button*/
 .card-button {
