--- a/jQuery/IT_Shop/styles.css
+++ b/jQuery/IT_Shop/styles.css
@@ -38,14 +38,14 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-}x
+}
 
 .container{
     max-width: 1300px;
     margin: 0 auto;
     padding: 0 1rem;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 1rem;
     margin-top: 2rem;
 
@@ -79,7 +79,6 @@ body{
     color: #777;
     margin: 1rem 0;
 }
-
 .card button{
     padding: 0.5rem 1rem;
     border: none;
